
* Resolve permissions issues when log directory is on an NFS mount with root
  squash. The `log_as_dir` directive was intended to work for these situations,
  but would fail in common configurations. It should now work.

* `log_file_mode` no longer respects the process umask, and the default has been
  changed from `0660` to `0640`.

shiny-server 1.5.7
--------------------------------------------------------------------------------

* Upgrade to Node v8.10.0.

* Dropped support for Ubuntu 12.04 and SLES 11.

* Support gzip/deflate compression for HTTP responses. You can disable this if
  necessary with the directive "http_allow_compression no;" at the top level
  of shiny-server.conf.

* Don't color log output if stdout is not a terminal.

shiny-server 1.5.6
--------------------------------------------------------------------------------

* Dropped support for RedHat/CentOS 5.

* Use HTTPS for Google Fonts on error page, which resolves insecure content errors on some browser when run behind SSL.
  (PR #322)

shiny-server 1.5.5
--------------------------------------------------------------------------------

There were no changes in this release. The version was increased just to match Shiny Server Pro.

shiny-server 1.5.4
--------------------------------------------------------------------------------

* Upgrade to Node.js v6.10.3.

* Upgrade to pandoc 1.19.2.1.

* Refactor scheduler code to make enforcement of connection limits more robust.

* Add opt-in clickjacking protection via `frame_options` directive.

* Fix "Error: Can't set headers after they are sent." appearing in the log.

shiny-server 1.5.3
--------------------------------------------------------------------------------

* Upgrade to Node.js v6.10.0.

shiny-server 1.5.2
--------------------------------------------------------------------------------

* Add additional configuration directives `http_keepalive_timeout`,
  `sockjs_heartbeat_delay`, and `sockjs_disconnect_delay` to allow working