@@ -272,10 +272,17 @@ var loadConfig_p = qutil.serialized(function() {
     } else {
       logger.error('Error loading config: ' + err.message);
     }
+    throw err;
   });
 });
 
-loadConfig_p().done();
+loadConfig_p()
+.fail(err => {
+  // If we fail to load the config during startup, exit with a
+  // failing error code.
+  process.exit(1);
+})
+.eat();
 
 function createLogger_p(logSpec) {
   if (!logSpec || !logSpec.path) {
@@ -313,7 +320,7 @@ function createLogger_p(logSpec) {
 process.on('SIGHUP', function() {
   logger.info('SIGHUP received, reloading configuration');
   render.flushCache();
-  loadConfig_p().done();
+  loadConfig_p().eat();
 });
 
 // On SIGUSR1, write worker registry contents to log
@@ -323,7 +330,10 @@ process.on('SIGUSR1', function() {
 
 // Clean up worker processes on shutdown
 
-var needsCleanup = true;
+// Save exit code as global, cause exiting involves lots of callbacks. 
+let exitCode = 0;
+// Ensure cleanup only happens once.
+let needsCleanup = true;
 function gracefulShutdown() {
   // Sometimes the signal gets sent twice. No idea why.
   if (!needsCleanup)
@@ -340,10 +350,16 @@ function gracefulShutdown() {
   logger.info('Shutting down worker processes (with notification)');
   schedulerRegistry.shutdown();
   needsCleanup = false;
-  setTimeout(process.exit, 500);
+  setTimeout(() => {
+    process.exit(exitCode);
+  }, 500);
 }
 
-function lastDitchShutdown() {
+function lastDitchShutdown(code) {
+  if (exitCode === 0 && code !== 0) {
+    exitCode = code;
+  }
+
   if (!needsCleanup)
     return;
   // More-violent shutdown (e.g. uncaught exception), no chance to notify
@@ -353,10 +369,17 @@ function lastDitchShutdown() {
   schedulerRegistry.shutdown();
 }
 
-process.on('SIGINT', gracefulShutdown);
-process.on('SIGTERM', gracefulShutdown);
-process.on('SIGABRT', gracefulShutdown);
-process.on('uncaughtException2', gracefulShutdown);
+function shutdownWithExitCode(code) {
+  return () => {
+    exitCode = code;
+    gracefulShutdown();
+  };
+}
+
+process.on('SIGINT', shutdownWithExitCode(128 + 2));
+process.on('SIGTERM', shutdownWithExitCode(128 + 15));
+process.on('SIGABRT', shutdownWithExitCode(128 + 6));
+process.on('uncaughtException2', shutdownWithExitCode(1));
 process.on('uncaughtException', function(err) {
   logger.error('Uncaught exception: ' + err);
   logger.error(err.stack);
